--- a/index.html
+++ b/index.html
@@ -213,6 +213,7 @@
 							<li><a href="http://www.twitter.com/michellehudson" class="icon icon-twitter"><span>Twitter</span></a></li>
 							<li><a href="https://github.com/michellehudson/monster_mashup" class="icon icon-github"><span>Github</span></a></li>
 							<li><a href="mailto:michelle.hudson@yale.edu" class="icon icon-envelope"><span>Email</span></a></li>
+							<li><a href="http://html5up.net/" target="_blank"><span>layout by html5up</span></a></li>
 						</ul>
 						</ul>
 					</div>
